--- a/modules/sanger-tol/telomere/extract/meta.yml
+++ b/modules/sanger-tol/telomere/extract/meta.yml
@@ -55,14 +55,27 @@ output:
             Telomere file formatted to bedgraph
           ontologies:
             - edam: "http://edamontology.org/format_3583" # BEDGRAPH
-
+  versions_telomereextract:
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - telomere_extract:
+          type: string
+          description: The name of the module
+      - awk -Wversion | sed '1!d; s/.*Awk //; s/,.*//':
+          type: eval
+          description: The expression to obtain the version of the tool
+topics:
   versions:
-    - versions.yml:
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
-        ontologies:
-          - edam: http://edamontology.org/format_3750 # YAML
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - telomere_extract:
+          type: string
+          description: The name of the module
+      - awk -Wversion | sed '1!d; s/.*Awk //; s/,.*//':
+          type: eval
+          description: The expression to obtain the version of the tool
 authors:
   - "@DLBPointon"
 maintainers:
