--- a/modules/sanger-tol/telomere/windows/meta.yml
+++ b/modules/sanger-tol/telomere/windows/meta.yml
@@ -43,14 +43,28 @@ output:
             TSV of likely telomeric sites
           ontologies:
             - edam: "http://edamontology.org/format_3475" # TSV
+  versions_telomerewindows:
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - telomere_windows:
+          type: string
+          description: The name of the module
+      - 1.0.0:
+          type: string
+          description: The version of the module
 
+topics:
   versions:
-    - versions.yml:
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
-        ontologies:
-          - edam: http://edamontology.org/format_3750 # YAML
+    - - ${task.process}:
+          type: string
+          description: The name of the process
+      - telomere_windows:
+          type: string
+          description: The name of the module
+      - 1.0.0:
+          type: string
+          description: The version of the module
 authors:
   - "@DLBPointon"
 maintainers:
