Updated the author/maintained list

--- a/modules/sanger-tol/bgziptabix/meta.yml
+++ b/modules/sanger-tol/bgziptabix/meta.yml
@@ -123,6 +123,7 @@ topics:
 authors:
   - "@maxulysse"
   - "@DLBPointon"
+  - "@muffato"
 maintainers:
-  - "@maxulysse"
   - "@DLBPointon"
+  - "@muffato"
