--- a/subworkflows/sanger-tol/gap_finder/nextflow.config
+++ b/subworkflows/sanger-tol/gap_finder/nextflow.config
@@ -7,4 +7,8 @@ process {
     withName: SEQTK_CUTN {
         ext.args        = "-n 1"
     }
+
+    withName: TABIX_BGZIPTABIX {
+        ext.args2       = "--csi"
+    }
 }
