Update telofinder to add tabix

--- a/subworkflows/sanger-tol/telo_finder/nextflow.config
+++ b/subworkflows/sanger-tol/telo_finder/nextflow.config
@@ -16,4 +16,8 @@ process {
         ext.args2   = "'BEGIN { FS=\"\\t\"; OFS=\"\\t\" } {print > \"direction.\"\$3\".split.telomere\"}'"
         ext.suffix  = "split.telomere"
     }
+
+    withName: TABIX_BGZIPTABIX {
+        ext.args2  = "--csi"
+    }
 }
