--- a/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
+++ b/subworkflows/sanger-tol/telo_finder/tests/nextflow.config
@@ -16,4 +16,8 @@ process {
         ext.args2   = { "${params.gawk_args}" }
         ext.suffix  = "split.telomere"
     }
+
+    withName: TABIX_BGZIPTABIX {
+        ext.args2       = { "${params.bgzip_args}" }
+    }
 }
