--- a/subworkflows/sanger-tol/fasta_compress_index/meta.yml
+++ b/subworkflows/sanger-tol/fasta_compress_index/meta.yml
@@ -8,11 +8,11 @@ keywords:
   - samtools
   - bgzip
 components:
+  - samtools/bgzip:
+      git_remote: https://github.com/nf-core/modules.git
   - samtools/dict:
       git_remote: https://github.com/nf-core/modules.git
   - samtools/faidx:
-      git_remote: https://github.com/nf-core/modules.git
-  - tabix/bgzip:
       git_remote: https://github.com/nf-core/modules.git
 
 input:
